Update taller1 - copia.ipynb

--- a/tarea1/taller1 - copia.ipynb
+++ b/tarea1/taller1 - copia.ipynb
@@ -30,7 +30,7 @@
    "id": "429202ca-38e2-4b30-b227-731f0c289b18",
    "metadata": {},
    "source": [
-    "Para mas informacion en [wikipedia](https://es.wikipedia.org/wiki/Seno_(trigonometr%C3%ADa)) y su grafica es\n"
+    "Para mas informacion en [wikipedia](https://es.wikipedia.org/wiki/Seno_(trigonometr%C3%ADa) y su grafica es\n"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "x = np.arange(-np.pi,np.pi,0.1)   # inicio, final y secuencia \n",
+    "x = np.arange(0,2*np.pi,0.1)   # inicio, final y secuencia \n",
     "y = np.sin(x)\n",
     "plt.title('ejemplo de la función seno')\n",
     "plt.plot(x,y)\n",
